@@ -1,3 +1,8 @@
+2007-10-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	* src/ConsoleStatCalc.cc: Let the user know that aria2 is now seeding
+	after the download finishes.
+
 2007-10-24  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	* src/Piece.{h, cc}: Added SubPiece infrastructure to track down
